# today

./: .gitignore  Cargo.toml  Dockerfile  README.md
scripts/: docker-build-and-release.sh  docker-build-and-run.sh  docker-build.sh
src/: api.rs  main.rs  route_handler.rs  types.rs
src/util/: cache.rs  country.rs  csv.rs  datetime.rs  environment.rs  hash.rs  http_client.rs  mod.rs  spotify_csv.rs  vector.rs
