[package]
name = "today"
version = "0.1.0"
authors = ["Prashanth R <1409501+prashanthr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
lru = "0.6"