[package]
name = "today"
version = "0.1.0"
authors = ["Prashanth R <1409501+prashanthr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-cors = "0.5.3"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
md5 = "0.7.0"
celes = "1.0.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
